<resources>
    <string name="app_name">WisataSumbar</string>
    <string name="facebook_app_id">189902258106587</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email Address</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="text_or">OR</string>
    <string name="text_login_facebook">Login with Facebook</string>
    <string name="text_login_twitter">Login with Twitter</string>
    <string name="text_register_login">NEED AN ACCOUNT?</string>
    <string name="text_register">Sign Up Now</string>
    <string name="text_login">LOGIN</string>

    <!--Nav Menu Drawer-->
    <string name="nav_home">Home </string>
    <string name="nav_profile">Profile</string>




    <string name="text_logout">Logout</string>
    <string name="text_emailpassword_null">Email dan Kata sandi tidak boleh kosong</string>
    <string name="text_fullname">Username</string>
    <string name="text_gender">Gender</string>
    <string name="text_register_null">Silakan diisi semua form</string>
    <string name="text_email_not_valid">Email tidak valid</string>
    <string name="text_password_low">Kata Sandi terlalu lemah</string>
    <string name="text_birthDate">Birth Date</string>
    <string name="text_male">Laki-laki</string>
    <string name="text_female">Perempuan</string>
    <string name="text_title_dialog_gender">Pilih Jenis Kelamin</string>
    <string name="text_camera">Kamera</string>
    <string name="text_gallery">Galeri </string>
    <string name="text_Image_use">Ambil Foto Menggunakan</string>
    <string name="text_camera_not_available">Kamera tidak tersedia</string>
    <string name="text_crop_failed">Gagal memotong Gambar</string>
    <string name="text_image_null">Gambar tidak di temukan</string>
</resources>
