<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.minangwisatasumbar.asywalulfikri.wisatasumbar.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:scrollbarThumbVertical="@null"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:paddingBottom="10dp"
                android:background="@drawable/ic_location"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:paddingBottom="20dp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/app_name"/>


                <AutoCompleteTextView
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edit_text_top_bg"
                    android:hint="@string/prompt_email"
                    android:gravity="center"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />


                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:gravity="center"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:background="@drawable/edit_text_bottom_bg"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />


            <Button
                android:id="@+id/btn_login"
                android:textAllCaps="false"
                android:layout_marginTop="10dp"
                style="?android:textAppearanceSmall"
                android:background="@color/colorLogin"
                android:textColor="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_login"
                android:textSize="17dp"/>

            <LinearLayout
               android:layout_width="match_parent"
               android:orientation="horizontal"
               android:padding="20dp"
               android:layout_height="wrap_content">


               <View
                   android:layout_width="wrap_content"
                   android:layout_height="1dp"
                   android:layout_marginTop="10dp"
                   android:layout_weight="1"
                   android:layout_marginRight="11dp"
                   android:layout_marginLeft="10dp"
                   android:background="@drawable/ic_line" />

               <TextView
                   android:layout_width="wrap_content"
                   android:text="@string/text_or"
                   android:gravity="center"
                   android:textSize="15dp"
                   android:layout_height="wrap_content" />

               <View
                   android:layout_width="wrap_content"
                   android:layout_height="1dp"
                   android:layout_marginTop="10dp"
                   android:layout_marginRight="11dp"
                   android:layout_weight="1"
                   android:layout_marginLeft="10dp"
                   android:background="@drawable/ic_line" />

           </LinearLayout>


            <com.facebook.login.widget.LoginButton
                android:id="@+id/btn_facebook"
                android:textAllCaps="false"
                style="?android:textAppearanceSmall"
                android:background="@color/colorFacebook"
                android:textColor="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/text_login_facebook"
                android:textSize="17dp"/>

            <com.twitter.sdk.android.core.identity.TwitterLoginButton
                android:id="@+id/btn_twitter"
                android:textAllCaps="false"
                style="?android:textAppearanceSmall"
                android:background="@color/colorTwitter"
                android:textColor="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:visibility="gone"
                android:layout_marginTop="16dp"
                android:text="@string/text_login_twitter"
                android:textSize="17dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/text_register_login"/>


            <Button
                android:id="@+id/btn_register"
                android:textAllCaps="false"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                style="?android:textAppearanceSmall"
                android:background="@color/colorRegister"
                android:textColor="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_register"
                android:textSize="17dp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
