<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLogin"
    android:scrollbars="none">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ThemeOverlay.AppCompat.Dark"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlwaysCollapsed">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:visibility="visible"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="50dp"
                    android:gravity="center"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_below="@+id/iv_avatar"
                        android:layout_marginRight="20dp"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="20dp"
                        android:orientation="vertical"
                        android:background="@drawable/edit_text_tengah_bg"
                        android:padding="30dp"
                        android:id="@+id/linearLayout">

                        <EditText
                            android:id="@+id/et_username"
                            android:layout_width="match_parent"
                            android:background="@drawable/edit_text_top_bg"
                            android:layout_height="50dp"
                            android:paddingLeft="10dp"
                            style="@style/EditText"
                            android:hint="@string/text_fullname"/>

                        <EditText
                            android:id="@+id/et_email"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:paddingLeft="10dp"
                            style="@style/EditText"
                            android:inputType="textEmailAddress"
                            android:background="@drawable/edit_text_tengah_bg_dua"
                            android:hint="@string/prompt_email" />

                        <EditText
                            android:id="@+id/et_gender"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:paddingLeft="10dp"
                            style="@style/EditText"
                            android:background="@drawable/edit_text_tengah_bg_dua"
                            android:hint="@string/text_gender"/>

                        <EditText
                            android:id="@+id/et_birthDate"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:paddingLeft="10dp"
                            style="@style/EditText"
                            android:background="@drawable/edit_text_tengah_bg_dua"
                            android:hint="@string/text_birthDate"/>
                        <EditText
                            android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:paddingLeft="10dp"
                            style="@style/EditText"
                            android:inputType="textPassword"
                            android:background="@drawable/edit_text_bottom_bg"
                            android:hint="@string/prompt_password"/>


                    </LinearLayout>

                    <ImageView
                        android:id="@+id/iv_avatar"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:foregroundGravity="center|bottom"
                        android:background="@drawable/ic_profile_blank"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true" />

                    <com.minangwisatasumbar.asywalulfikri.wisatasumbar.widget.RoundedImageView
                        android:id="@+id/iv_take_image"
                        android:layout_width="40dp"
                        android:background="@drawable/ic_camera"
                        android:layout_height="40dp"
                        android:layout_above="@+id/linearLayout"
                        android:layout_alignLeft="@+id/iv_avatar"
                        android:layout_alignStart="@+id/iv_avatar"
                        android:layout_marginLeft="65dp"
                        android:layout_marginStart="65dp" />
                </RelativeLayout>
            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:clickable="true"
            android:text="REGISTER"
            android:textColor="@color/colorWhite"
            android:background="@drawable/ic_corner_register"
            app:layout_anchor="@id/appbar"
            app:layout_anchorGravity="bottom|center" />
    </android.support.design.widget.CoordinatorLayout>

</RelativeLayout>